# CryptoFriends

./: .gitignore  HexToBase64.jl  readme.md  run.bat
.github/workflows/: do_this_check.sh  set1.yml
hexToBase64/: Cargo.toml
hexToBase64/src/: main.rs
meta/: codegen.py  frequency_map.py  frequency_map.txt
meta/utils/: cpp.py
src/: CMakeLists.txt  base64.h  bytearray.h  decrypt.h  hex.h  main.cpp  text_frequency_analysis.h
test/: CMakeLists.txt  set1.cpp
